Massively improve JavaDocs, annotate serial UIDs, address code smells