@@ -232,7 +232,7 @@ public class DropdownListField extends GuiComponent {
     this.getContentList().suspend();
 
     if (!this.getListEntries().isEmpty()) {
-      this.chosenElementComponent.setText(this.getListEntries().get(0).getText());
+      this.chosenElementComponent.setText(this.getListEntries().getFirst().getText());
     }
 
     this.dropDownButton.onClicked(e -> this.toggleDropDown());
